[package]
name = "telemt"
version = "3.4.10"
edition = "2024"

[features]
default = ["https-control-plane"]
hot-reload = ["dep:notify"]
https-control-plane = ["tls-pure-rust", "dep:reqwest"]
http-probes = []
redteam_offline_expected_fail = []
shadowsocks-upstream = ["dep:shadowsocks"]
syslog = ["dep:libc"]
tls-pure-rust = ["dep:rustls", "dep:rustls-rustcrypto", "dep:tokio-rustls", "dep:webpki-roots"]
tls-rustls-fetch = ["tls-pure-rust", "dep:x509-parser"]

[dependencies]
# Optional Unix integrations.
libc = { version = "0.2", optional = true }

# Async runtime
tokio = { version = "1.42", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-util = { version = "0.7", default-features = false, features = [
  "codec",
  "rt",
] }

# Crypto
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.4"
crc32c = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
static_assertions = "1.1"

# Network
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", default-features = false, features = [
  "net",
  "user",
  "process",
  "fs",
  "signal",
] }
shadowsocks = { version = "1.24", optional = true, default-features = false, features = [
  "aead-cipher",
  "aead-cipher-2022",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
x509-parser = { version = "0.18", optional = true }

# Utils
bytes = "1.9"
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
dashmap = "6.1"
arc-swap = "1.7"
lru = "0.16"
rand = { version = "0.10", default-features = false, features = [
  "std",
  "std_rng",
  "sys_rng",
  "thread_rng",
] }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
hex = "0.4"
base64 = "0.22"
url = "2.5"
crossbeam-queue = "0.3"
x25519-dalek = "2"
rustix = { version = "1.1", default-features = false, features = ["process"] }

# HTTP
notify = { version = "8.2", optional = true, default-features = false, features = ["macos_kqueue"] }
ipnetwork = { version = "0.21", features = ["serde"] }
hyper = { version = "1", default-features = false, features = [
  "client",
  "server",
  "http1",
] }
hyper-util = { version = "0.1", default-features = false, features = [
  "http1",
  "server",
  "server-auto",
  "tokio",
] }
http-body-util = "0.1"
httpdate = "1.0"
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
], optional = true }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "custom-provider",
], optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
webpki-roots = { version = "1.0", optional = true }
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls-no-provider",
], optional = true }

[dev-dependencies]
tokio-test = { version = "0.4", default-features = false }
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
proptest = { version = "1.4", default-features = false, features = ["std"] }
futures = "0.3"
libc = "0.2"
tokio = { version = "1.42", default-features = false, features = ["test-util"] }

[[bench]]
name = "crypto_bench"
harness = false
